crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__divert__simple-divert.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/divert/simple-divert
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "We arrived into London at 9.45pm exactly.\n" [Continue]
> "We hurried home to Savile Row as fast as we could." [Ended]
outcome: Ended
